plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.qrush'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'com.h2database:h2:1.3.148'

	testCompileOnly 'org.projectlombok:lombok:1.18.34'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	compileOnly("org.springframework.boot:spring-boot-devtools")
	compileOnly('org.projectlombok:lombok:1.18.34')
	annotationProcessor('org.projectlombok:lombok:1.18.34')
}

bootJar {
	mainClass = 'org.qrush.brand.BrandApplication'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += ['-XX:+EnableDynamicAgentLoading']
}